2009-03-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Text/TextFileService.cs:
	* MonoDevelop.Projects.Text/CodeFormatDescription.cs: Worked
	  on code formatting.

2009-03-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectReference.cs: Make sure missing
	  references are updated when changing the framework.

2009-03-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectReference.cs: Don't store the
	  loaded reference for framework assemblies, since they must
	  always match the current target framework version. Fixes bug
	  #483981 - [Regression] C# Library projects have a bad
	  reference to the System library.

2009-03-10  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.csproj:
	* MonoDevelop.Projects.addin.xml:
	* MonoDevelop.Projects.Text/IFormatter.cs:
	* MonoDevelop.Projects.Text/TextFileService.cs:
	* MonoDevelop.Projects.Text/XmlDefinitionCodon.cs:
	* MonoDevelop.Projects.Text/CodeFormatDescription.cs: Worked
	  on code formatting infrastructure.

2009-03-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Added
	  null check.

2009-03-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/SolutionItem.cs: Added some protection
	  in case GetDefaultBaseDirectory retuns an empty value.

2009-03-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	  Save the BaseDirectory property. Store all paths relative to
	  ItemDirectory, not BaseDirectory. Fixes bug #483134 -
	  Project base directory doesn't appear to be serialized
	  correctly.

2009-03-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Text/TextFile.cs: Added some more
	  encodings to bom detection.

2009-03-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Text/TextFile.cs: Use BOM to detect
	  source encodings. (We had a file that was miss-interpreted